--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -55,8 +55,10 @@
   input {
     margin: 20px 0;
     margin-bottom: 15px;
-    padding: 5px 0;
-    font-size: 15px;
+    padding: 10px;
+    font-size: 17px;
+    font-weight: bold;
     outline: none;
+    border-radius: 10px;
   }
 }
