--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: Gladiora;
-  src: url('./font/gladiora-regular.ttf');
+  src: url('./font/gladiora-regular.ttf') format('ttf'), url('gladiora-regular-webfont.woff2') format('woff2'),
+    url('gladiora-regular-webfont.woff') format('woff');
 }
 
 @import 'variables.scss';
