--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,7 +1,11 @@
 @import '../../variables';
 
 .button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 260px;
   padding: 20px 25px;
@@ -11,6 +15,8 @@
   border: none;
   border-radius: 23px;
   cursor: pointer;
+  -webkit-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
   transition: all 0.1s linear;
 
   svg {
