--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -1,5 +1,4 @@
 @import '../../variables';
-
 .dropdown-content {
   position: absolute;
   top: 50px;
@@ -9,10 +8,16 @@
   padding: 10px 30px;
   background-color: #ddd;
   border-radius: 15px;
+  -webkit-box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
   box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
 
   &:hover {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 }
@@ -26,6 +31,8 @@
     width: 20px;
     height: 20px;
     background: none;
+    -webkit-transition: all 0.1s linear;
+    -o-transition: all 0.1s linear;
     transition: all 0.1s linear;
   }
 
