--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -6,15 +6,26 @@
   right: 0;
   left: 0;
   z-index: 10000000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   background: rgb(0 0 0 / 50%);
 
   &__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 400px;
     padding: 20px;
@@ -23,8 +34,14 @@
   }
 
   &__header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     margin-bottom: 50px;
 
@@ -44,6 +61,8 @@
     border: 2px solid #000;
     border-radius: 10px;
     cursor: pointer;
+    -webkit-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
     transition: all 0.15s linear;
 
     &:hover {
